# detect_meteors

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMAND_OPTIONS.md  EXCEPTION_POLICY.md  INSTALL.md  INSTALL_DEV.md  LOADMAP.md  LOGGING_PLAN.md  NOTICE  NPF_RULE.md  PLUGIN_AUTHOR_GUIDE.md  README.md  RELEASE_NOTES_1.2.1.md  RELEASE_NOTES_1.2.md  RELEASE_NOTES_1.3.1.md  RELEASE_NOTES_1.3.md  RELEASE_NOTES_1.4.1.md  RELEASE_NOTES_1.4.md  RELEASE_NOTES_1.5.md  RELEASE_NOTES_1.6.md  ROADMAP.md  _detect_meteors_cli  cli.py  detect_meteors_cli.py  detect_meteors_cli_completion.bash  outputs_analysis.md  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: lint.yml  python-test.yml
config_examples/: pipeline.yaml
detect_meteors/: app.py  builtin_plugins.py  cli.py  default_plugin.py  exif.py  npf.py  plugin_loader.py  services.py
docs/: aircraft_light_trails_hook_design.md  plugin_development_guide.md  plugins.md
meteor_core/: __init__.py  config_io.py  exceptions.py  i18n.py  image_io.py  messages.py  pipeline.py  plugin_contract.py  plugin_registry.py  plugin_registry_base.py  roi_selector.py  schema.py  utils.py
meteor_core/detectors/: __init__.py  base.py  discovery.py  hough_default.py  registry.py  simple_threshold.py
meteor_core/hooks/: __init__.py  aircraft_trail.py  base.py  discovery.py  file_found.py  registry.py
meteor_core/inputs/: __init__.py  base.py  discovery.py  raw.py  registry.py
meteor_core/locales/: __init__.py
meteor_core/locales/en/: __init__.py  messages.yaml
meteor_core/locales/ja/: __init__.py  messages.yaml
meteor_core/outputs/: __init__.py  base.py  discovery.py  file_handler.py  handler.py  progress.py  registry.py  writer.py
meteor_core/templates/: diagnostic_report.md.j2
rawfiles/: .gitkeep
tests/: __init__.py  test_aircraft_trail_hook_v1x.py  test_app_layer.py  test_calculations.py  test_calculations_v1x.py  test_cli_layer.py  test_cli_options_v1x.py  test_config_io_v1x.py  test_detector_plugin_v1x.py  test_detector_registry_v1x.py  test_detectors_base_v1x.py  test_discovery_parity.py  test_exceptions_v1x.py  test_fisheye_v1x.py  test_i18n.py  test_image_io_helpers_v1x.py  test_infrastructure_v1x.py  test_inputs_base_v1x.py  test_inputs_logging_v1x.py  test_integration.py  test_integration_v1x.py  test_loader_registry_v1x.py  test_memory_batch_size_v1x.py  test_output_handler_registry_v1x.py  test_outputs_base_v1x.py  test_pipeline_execution_v1x.py  test_pipeline_helpers_v1x.py  test_plugin_contract_helpers_v1x.py  test_plugin_contract_validation_v1x.py  test_plugin_loader.py  test_plugin_registry_base.py  test_raw_loader_v1x.py  test_registry_default_contracts_v1x.py  test_roi_selector_helpers_v1x.py  test_roi_selector_ui_v1x.py  test_schema_context_results_v1x.py  test_sensor_npf_integration_v1x.py  test_sensor_presets_v1x.py  test_sensor_validation_v1x.py  test_utils_display_width_v1x.py  (+1 more)
tests_v2/: README.md  test_app_layer.py  test_plugin_loader.py
