# ==========================================
# Detect Meteors CLI - Project Configuration
# ==========================================
# PEP 621 compliant pyproject.toml
#
# Note: Version is also defined in meteor_core/schema.py
#       Keep both in sync when releasing new versions.

# ==========================================
# Project Metadata (PEP 621)
# ==========================================
[project]
name = "detect-meteors"
version = "1.5.9"
description = "Automated meteor detection in RAW astrophotography images using frame-to-frame difference analysis"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Shinichi Morita", email = "shin3tky@gmail.com" }
]
maintainers = [
    { name = "Shinichi Morita", email = "shin3tky@gmail.com" }
]
keywords = [
    "meteor",
    "astronomy",
    "astrophotography",
    "image-processing",
    "raw",
    "detection",
    "opencv",
    "hough-transform",
    "npf-rule",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=2.2.6",
    "matplotlib>=3.10.7",
    "opencv-python>=4.12.0",
    "rawpy>=0.25.1",
    "psutil>=7.1.3",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "flake8-pyproject>=1.2.4",
    "pre-commit>=4.5.0",
    "coverage>=7.6.0",
]

[project.urls]
Homepage = "https://github.com/shin3tky/detect_meteors"
Repository = "https://github.com/shin3tky/detect_meteors.git"
Documentation = "https://github.com/shin3tky/detect_meteors#readme"
Issues = "https://github.com/shin3tky/detect_meteors/issues"
Changelog = "https://github.com/shin3tky/detect_meteors/blob/main/CHANGELOG.md"

# ==========================================
# Black - Code Formatter
# ==========================================
[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | \.serena
  | \.ruff_cache
  | \.github
  | build
  | dist
  | \.egg-info
  | rawfiles
  | candidates
  | debug_masks
)/
'''

# ==========================================
# Flake8 - Linter (via flake8-pyproject)
# ==========================================
[tool.flake8]
max-line-length = 88
max-complexity = 70
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".serena",
    ".ruff_cache",
    ".github",
    "build",
    "dist",
    "*.egg-info",
    "rawfiles",
    "candidates",
    "debug_masks",
]
# E203: whitespace before ':'
# W503: line break before binary operator
# E501: line too long (handled by Black)
# E226: missing whitespace around arithmetic operator
ignore = ["E203", "W503", "E501", "E226"]

# ==========================================
# Testing - unittest with coverage
# ==========================================
# Test execution:
#   python run_tests.py                    # All tests
#   python -m unittest discover tests      # Via unittest
#
# Coverage measurement:
#   coverage run -m unittest discover tests
#   coverage report                        # Terminal output
#   coverage html                          # HTML report in htmlcov/

[tool.coverage.run]
source = ["meteor_core"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
