# ==========================================
# Detect Meteors CLI - Project Configuration
# ==========================================
# PEP 621 compliant pyproject.toml
#
# Note: Version is also defined in meteor_core/schema.py
#       Keep both in sync when releasing new versions.

# ==========================================
# Project Metadata (PEP 621)
# ==========================================
[project]
name = "detect-meteors"
version = "1.6.10"
description = "Automated meteor detection in RAW astrophotography images using frame-to-frame difference analysis"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Shinichi Morita", email = "shin3tky@gmail.com" }
]
maintainers = [
    { name = "Shinichi Morita", email = "shin3tky@gmail.com" }
]
keywords = [
    "meteor",
    "astronomy",
    "astrophotography",
    "image-processing",
    "raw",
    "detection",
    "opencv",
    "hough-transform",
    "npf-rule",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=2.2.6",
    "opencv-python>=4.12.0",
    "rawpy>=0.25.1",
    "psutil>=7.2.2",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.0",
    "ty>=0.0.15",
    "pre-commit>=4.5.1",
    "coverage>=7.13.4",
]

[project.urls]
Homepage = "https://github.com/shin3tky/detect_meteors"
Repository = "https://github.com/shin3tky/detect_meteors.git"
Documentation = "https://github.com/shin3tky/detect_meteors#readme"
Issues = "https://github.com/shin3tky/detect_meteors/issues"
Changelog = "https://github.com/shin3tky/detect_meteors/blob/main/CHANGELOG.md"

[project.entry-points."detect_meteors.hook"]
aircraft_trail = "meteor_core.hooks.aircraft_trail:AircraftTrailHook"

# ==========================================
# Ruff - Linter and Formatter
# ==========================================
[tool.ruff]
line-length = 88
target-version = "py312"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".serena",
    ".ruff_cache",
    ".github",
    "build",
    "dist",
    "*.egg-info",
    "rawfiles",
    "candidates",
    "debug_masks",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "C90",    # mccabe complexity
]

ignore = [
    "E203",   # whitespace before ':'
    "E501",   # line too long (handled by formatter)
    "E226",   # missing whitespace around arithmetic operator
]

[tool.ruff.lint.mccabe]
max-complexity = 40

[tool.ruff.lint.per-file-ignores]
# E402: module level import not at top of file
# In __init__.py, logging setup must come before submodule imports
"meteor_core/__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==========================================
# Testing - unittest with coverage
# ==========================================
# Test execution:
#   python run_tests.py                    # All tests
#   python -m unittest discover tests      # Via unittest
#
# Coverage measurement:
#   coverage run -m unittest discover tests
#   coverage report                        # Terminal output
#   coverage html                          # HTML report in htmlcov/

[tool.coverage.run]
source = ["meteor_core"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    ".venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

# ==========================================
# ty - Type Checker (Astral)
# ==========================================
# Phase 1: Relaxed adoption - focus on critical issues only
# Run: uv run ty check
# See: https://docs.astral.sh/ty/reference/configuration/
#
# Strategy:
#   - Start with minimal errors to establish baseline
#   - Gradually enable more rules as code is improved
#   - Phase 2: Change "ignore" → "warn" for review
#   - Phase 3: Change "warn" → "error" for enforcement

[tool.ty.src]
include = ["meteor_core", "detect_meteors_cli.py"]

[tool.ty.rules]
# -----------------------------------------------
# Critical errors - always enforce
# -----------------------------------------------
# Note: unresolved-import demoted to warn for optional deps (torch)
unresolved-import = "warn"
invalid-return-type = "error"
invalid-base = "error"

# -----------------------------------------------
# High-noise rules - ignore for Phase 1
# These require significant refactoring to fix
# -----------------------------------------------
invalid-argument-type = "warn"
not-subscriptable = "ignore"        # 78 occurrences - Union type access
unresolved-attribute = "ignore"     # 53 occurrences - Dynamic attributes
no-matching-overload = "ignore"     # 18 occurrences - Overload resolution

# -----------------------------------------------
# Medium priority
# -----------------------------------------------
invalid-method-override = "error"
too-many-positional-arguments = "warn"
call-non-callable = "warn"
invalid-assignment = "warn"

# -----------------------------------------------
# Default-enabled rules - ignore for Phase 1
# -----------------------------------------------
possibly-missing-attribute = "ignore"  # Dynamic attribute patterns

# -----------------------------------------------
# Test files: Even more relaxed
# -----------------------------------------------
[[tool.ty.overrides]]
include = ["tests/**"]

[tool.ty.overrides.rules]
unresolved-import = "warn"
invalid-return-type = "error"
invalid-base = "warn"

# ==========================================
# Setuptools - Package Discovery
# ==========================================
[tool.setuptools.packages.find]
include = ["meteor_core", "meteor_core.*"]

[tool.setuptools.package-data]
"meteor_core" = ["templates/*.md.j2", "locales/**/*.yaml"]
